# cylinder-wake-re3900

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  generate_preview.py  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark_submission.md  bug_report.md
benchmarks/: tasks.md
cylinderwake/: __init__.py  api.py  convert.py  dataset.py  download.py  grid_coordinates.npz  visualize.py
docs/: interactive_demo.html
notebooks/: 01_explore_eulerian.ipynb  02_explore_lagrangian.ipynb  03_baseline_forecasting.ipynb  04_sparse_reconstruction.ipynb
